--- a/Frontend/Ring/.project
+++ b/Frontend/Ring/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Elden</name>
+	<name>Ring</name>
 	<comment></comment>
 	<projects>
 	</projects>
