--- a/Frontend/Ring/pom.xml
+++ b/Frontend/Ring/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.1.7.Final</version>
         </dependency>
+        <dependency>
+        	<groupId>com.investigacion</groupId>
+        	<artifactId>investigacion</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
