--- a/Frontend/Ring/pom.xml
+++ b/Frontend/Ring/pom.xml
@@ -28,5 +28,10 @@
         	<artifactId>investigacion</artifactId>
         	<version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+			<groupId>io.github.vincenzopalazzo</groupId>
+			<artifactId>material-ui-swing</artifactId>
+			<version>1.1.2</version>
+		</dependency>
 	</dependencies>
 </project>
