--- a/Frontend/Ring/pom.xml
+++ b/Frontend/Ring/pom.xml
@@ -46,5 +46,10 @@
 		    <artifactId>google-http-client-jackson2</artifactId>
 		    <version>1.44.1</version> <!-- Asegúrate de utilizar la última versión compatible -->
 		</dependency>
+        <dependency>
+        	<groupId>com.github.javafaker</groupId>
+        	<artifactId>javafaker</artifactId>
+        	<version>1.0.2</version>
+    	</dependency>
 	</dependencies>
 </project>
